bpo-20602: Do not clear sys.flags and sys.float_info during shutdown (GH-8096)

There is no need to clear these immutable objects during shutdown.